<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SeniorsApp</string>
    <string name="okButton">OK</string>
    <string name="start1">Welcome in SeniorsApp!</string>
    <string name="start2">Sign in</string>
    <string name="start3">Sign up</string>
    <string name="login1">Sign in</string>
    <string name="login2">e-mail</string>
    <string name="login3">password</string>
    <string name="login4">Are you not registered? Sign up</string>
    <string name="registration1">Sign up</string>
    <string name="registration2">e-mail</string>
    <string name="registration3">password</string>
    <string name="registration4">Do you have an account? Sign in</string>
    <string name="users_info1">Give us some information about yourself</string>
    <string name="users_info2">Name:</string>
    <string name="users_info3">Localisation:</string>
    <string name="users_info4">Age:</string>
    <string name="users_info5">Sex:</string>
    <string name="users_info6">Female</string>
    <string name="users_info7">Male</string>
    <string name="preferences1">Fill in your preferences</string>
    <string name="preferences2">I would like to meet:</string>
    <string name="preferences3">Females</string>
    <string name="preferences4">Males</string>
    <string name="preferences5">Age range:</string>
    <string name="preferences6">Minimum age:</string>
    <string name="preferences7">Maximum age:</string>
    <string name="internet1">OOPS!</string>
    <string name="internetL2">"No Internet Connection! You can't sign in!"</string>
    <string name="internetR2">"No Internet Connection! You can't sign up!"</string>
    <string name="internet3">Try Again</string>
    <string name="profile_info1">Choose main picture</string>
    <string name="profile_info2">take a picture</string>
    <string name="profile_info3">choose from gallery</string>
    <string name="profile_info4">About me</string>
    <string name="profile_info5">Write here your short description.</string>
    <string name="profile_info6">Description:</string>
    <string name="profile_info7">Preferred sex:</string>
    <string name="profile_info8">Minimum age:</string>
    <string name="profile_info9">Maximum age:</string>
    <string name="settings1">delete account</string>
    <string name="settings2">confirm changes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="my_profile1">name</string>
    <string name="my_profile2">localisation</string>
    <string name="my_profile3">age</string>
    <string name="my_profile4">description</string>
    <string name="delete1">Are you sure you want to delete your account?</string>
    <string name="delete2">yes</string>
    <string name="delete3">no</string>
    <string name="chat1">Type a message...</string>
    <string name="chat2">send</string>
    <string name="delete_match1">Are you sure you want to delete contact?</string>



    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>