<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back1"
    android:padding="30dp"
    tools:context=".Activities.LogInActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-medium"
        android:text="@string/login1"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="50dp"
        app:layout_constraintBottom_toTopOf="@+id/emailEditTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailEditTxt"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="200dp"
        android:hint="@string/login2"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="92dp"
        android:textAlignment="center"
        android:textSize="30dp"
        android:textColorHint="@color/gray"
        android:textColor="@color/black"
        android:background="@drawable/button_white"/>

    <EditText
        android:id="@+id/passwordEditTxt"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_white"
        android:hint="@string/login3"
        android:textColorHint="@color/gray"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30dp"
        app:layout_constraintTop_toBottomOf="@+id/emailEditTxt"
        />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/button4"
        android:fontFamily="sans-serif-medium"
        android:includeFontPadding="false"
        android:text="@string/okButton"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/color1"
        android:textSize="30dp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditTxt" />
</androidx.constraintlayout.widget.ConstraintLayout>