<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:padding="30dp"
        tools:context=".Activities.UsersInfoActivity">

        <TextView
            android:id="@+id/textViewInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-medium"
            android:padding="10dp"
            android:text="@string/preferences1"
            android:textAlignment="center"
            android:textColor="@color/color3"
            android:textSize="38dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/sexTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="50dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/preferences2"
            android:textColor="@color/color2"
            android:textSize="28dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewInfo" />

        <CheckBox
            android:id="@+id/femalesCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/preferences3"
            android:fontFamily="sans-serif-medium"
            android:buttonTint="@color/color2"
            android:textColor="@color/color3"
            android:textSize="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sexTextView" />

        <CheckBox
            android:id="@+id/malesCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:buttonTint="@color/color2"
            android:fontFamily="sans-serif-medium"
            android:text="@string/preferences4"
            android:textColor="@color/color3"
            android:textSize="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/femalesCheckBox" />

        <TextView
            android:id="@+id/ageRangeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="40dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/preferences5"
            android:textColor="@color/color2"
            android:textSize="28dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/malesCheckBox" />

        <EditText
            android:id="@+id/minimalAgeEditText"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-medium"
            android:backgroundTint="@color/color3"
            android:textColor="@color/color2"
            android:textSize="30dp"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/ageRangeTextView" />


        <EditText
            android:id="@+id/maximalAgeEditText"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="14dp"
            android:fontFamily="sans-serif-medium"
            android:backgroundTint="@color/color3"
            android:textSize="30dp"
            android:textColor="@color/color2"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/minimalAgeEditText" />

        <Button
            android:id="@+id/confirmPrefButton"
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_margin="40dp"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button1"
            android:fontFamily="sans-serif-medium"
            android:includeFontPadding="false"
            android:text="@string/okButton"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="26dp"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.586"
            app:layout_constraintStart_toStartOf="parent"
            android:onClick="goToUsersProfileOnClick"
            app:layout_constraintTop_toBottomOf="@+id/maximalAgeEditText" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="28dp"
            android:text="@string/preferences6"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/color3"
            android:textSize="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ageRangeTextView" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="34dp"
            android:text="@string/preferences7"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/color3"
            android:textSize="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
